--- a/ReQuantum/Views/Calendar/WeekCalendarView.axaml
+++ b/ReQuantum/Views/Calendar/WeekCalendarView.axaml
@@ -4,7 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:ReQuantum.ViewModels"
              xmlns:controls="clr-namespace:ReQuantum.Controls"
-             xmlns:r="https://github.com/metaone01/RelativeControl.Avalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
              x:Class="ReQuantum.Views.WeekCalendarView"
              x:DataType="viewModels:WeekCalendarViewModel">
@@ -12,11 +11,13 @@
     <viewModels:WeekCalendarViewModel />
   </Design.DataContext>
 
-  <!-- 默认移动端样式 -->
-  <Border Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
-          BorderThickness="0"
-          CornerRadius="8">
-    <Grid RowDefinitions="Auto,*" ColumnDefinitions="50,*">
+  <Grid>
+    <!-- 移动端布局 -->
+    <Border IsVisible="{Binding !WindowService.IsDesktopMode}"
+            Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
+            BorderThickness="0"
+            CornerRadius="8">
+      <Grid RowDefinitions="Auto,*" ColumnDefinitions="50,*">
       
       <!-- 左上角空白 -->
       <Border Grid.Row="0" Grid.Column="0"/>
@@ -48,16 +49,14 @@
                          FontSize="12" 
                          Opacity="0.6" 
                          FontWeight="SemiBold"/>
-                <Border Background="{Binding IsToday, Converter={x:Static controls:CalendarConverters.IsTodayToBackgroundConverter}}"
-                        BorderThickness="{Binding IsSelected, Converter={x:Static controls:CalendarConverters.IsSelectedToBorderThicknessConverter}}"
-                        BorderBrush="{Binding IsSelected, Converter={x:Static controls:CalendarConverters.IsSelectedToBorderBrushConverter}}"
+                <Border Background="Transparent"
+                        BorderThickness="0"
                         CornerRadius="16"
                         Padding="8,4"
                         HorizontalAlignment="Center">
                   <TextBlock Text="{Binding Day}"
-                           FontSize="16"
-                           Foreground="{Binding IsToday, Converter={x:Static controls:CalendarConverters.IsTodayToForegroundConverter}}"
-                           FontWeight="{Binding IsToday, Converter={x:Static controls:CalendarConverters.IsTodayToFontWeightConverter}}"/>
+                           FontSize="12"
+                           FontWeight="Normal"/>
                 </Border>
               </StackPanel>
             </Button>
@@ -69,7 +68,7 @@
       <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
                     VerticalScrollBarVisibility="Auto" 
                     HorizontalScrollBarVisibility="Disabled">
-        <Grid ColumnDefinitions="50,*" Height="780">
+        <Grid ColumnDefinitions="50,*" Height="780" RequestBringIntoView="Grid_RequestBringIntoView">
           
           <!-- 左侧时间列 -->
           <ItemsControl Grid.Column="0" ItemsSource="{x:Static controls:CalendarConverters.Hours24}">
@@ -143,7 +142,7 @@
                       </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
-                      <DataTemplate DataType="controls:WeekTimelineItem">
+                      <DataTemplate DataType="viewModels:WeekTimelineItem">
                         <Grid Width="{Binding $parent[Button].Bounds.Width}">
                           <!-- 待办事项（红色区块，宽度95%，居左）-->
                           <Border IsVisible="{Binding IsTodo}"
@@ -197,24 +196,21 @@
         </Grid>
       </ScrollViewer>
       
-    </Grid>
-  </Border>
+      </Grid>
+    </Border>
 
-  <!-- 桌面端样式 -->
-  <UserControl.Styles>
-    <Style Selector="UserControl.desktop Border">
-      <Setter Property="Child">
-        <Template>
-          <Border Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
-                  BorderThickness="0"
-                  CornerRadius="8">
-            <Grid RowDefinitions="Auto,*" ColumnDefinitions="60,*">
+    <!-- 桌面端布局 -->
+    <Border IsVisible="{Binding WindowService.IsDesktopMode}"
+            Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
+            BorderThickness="0"
+            CornerRadius="8">
+      <Grid RowDefinitions="Auto,*" ColumnDefinitions="60,*">
               
               <!-- 左上角空白 -->
               <Border Grid.Row="0" Grid.Column="0"/>
               
               <!-- 星期标题行 -->
-              <ItemsControl Grid.Row="0" Grid.Column="1" ItemsSource="{Binding $parent[UserControl].((viewModels:WeekCalendarViewModel)DataContext).WeekDays}">
+              <ItemsControl Grid.Row="0" Grid.Column="1" ItemsSource="{Binding WeekDays}">
                 <ItemsControl.ItemsPanel>
                   <ItemsPanelTemplate>
                     <UniformGrid Columns="7"/>
@@ -258,7 +254,7 @@
               </ItemsControl>
 
               <!-- 时间线网格（桌面端不限高）-->
-              <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" ColumnDefinitions="60,*">
+              <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" ColumnDefinitions="60,*" RequestBringIntoView="Grid_RequestBringIntoView">
                 
                 <!-- 左侧时间列 -->
                 <ItemsControl Grid.Column="0" ItemsSource="{x:Static controls:CalendarConverters.Hours24}">
@@ -291,7 +287,7 @@
                   </ItemsControl>
                   
                   <!-- 7天列 -->
-                  <ItemsControl ItemsSource="{Binding $parent[UserControl].((viewModels:WeekCalendarViewModel)DataContext).WeekDays}">
+                  <ItemsControl ItemsSource="{Binding WeekDays}">
                     <ItemsControl.ItemsPanel>
                       <ItemsPanelTemplate>
                         <UniformGrid Columns="7"/>
@@ -330,7 +326,7 @@
                             </ItemsPanelTemplate>
                           </ItemsControl.ItemsPanel>
                           <ItemsControl.ItemTemplate>
-                            <DataTemplate DataType="controls:WeekTimelineItem">
+                            <DataTemplate DataType="viewModels:WeekTimelineItem">
                               <Grid Width="{Binding $parent[Button].Bounds.Width}">
                                 <!-- 待办事项 -->
                                 <Border IsVisible="{Binding IsTodo}"
@@ -381,12 +377,8 @@
                     </ItemsControl.ItemTemplate>
                   </ItemsControl>
                 </Grid>
-              </Grid>
-              
-            </Grid>
-          </Border>
-        </Template>
-      </Setter>
-    </Style>
-  </UserControl.Styles>
+        </Grid>
+      </Grid>
+    </Border>
+  </Grid>
 </UserControl>
