feat: 增加了考试信息的获取功能，并且完成了考试信息在日历界面的显示。 To-do： 1. 增加PTA数据爬取 2. 将考试界面和日程页面合并，将考试信息获取按钮合并到课程获取按钮中 3. 在获取有效课程信息后，将调试页面移除

--- a/ReQuantum/Modules/Calendar/Presentations/CalendarView.axaml
+++ b/ReQuantum/Modules/Calendar/Presentations/CalendarView.axaml
@@ -34,9 +34,12 @@
       <Border Grid.Column="2" Padding="16">
         <ScrollViewer VerticalScrollBarVisibility="Hidden">
           <StackPanel Spacing="24">
-            
+
             <!-- 日程区域（上部） -->
             <views:EventListView DataContext="{Binding EventListViewModel}"/>
+
+            <!-- 考试区域 -->
+            <views:ExamListView DataContext="{Binding ExamListViewModel}"/>
 
             <!-- 待办区域（中部） -->
             <views:TodoListView DataContext="{Binding TodoListViewModel}"/>
@@ -64,9 +67,12 @@
 
         <!-- 内容区域 -->
         <StackPanel Spacing="16">
-          
+
           <!-- 日程区域 -->
           <views:EventListView DataContext="{Binding EventListViewModel}"/>
+
+          <!-- 考试区域 -->
+          <views:ExamListView DataContext="{Binding ExamListViewModel}"/>
 
           <!-- 待办区域 -->
           <views:TodoListView DataContext="{Binding TodoListViewModel}"/>
