--- a/ReQuantum/Modules/Dashboard/Presentations/DashboardView.axaml
+++ b/ReQuantum/Modules/Dashboard/Presentations/DashboardView.axaml
@@ -11,6 +11,8 @@
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
     <viewModels:DashboardViewModel />
   </Design.DataContext>
+
+
   <StackPanel Spacing="16" Margin="16">
       <TextBlock Text="{Binding Welcome}"
                  FontSize="16"
@@ -21,5 +23,23 @@
         <TextBlock Text="点我"
                     FontSize="14"/>
       </Button>
+
+
+      <TextBlock Text="{Binding aSentence}"
+                 FontSize="96"
+                 Background="BlueViolet"
+                 Foreground="Yellow"/>
+      <Button Command="{Binding ClickCommand}">
+          <TextBlock Text="Don't hit me.Please">
+
+          </TextBlock>
+      </Button>
+
+      <TextBlock IsVisible="{Binding IsClick}"
+                 Text="Why do you still click..."
+                 FontSize="48"
+                 Foreground="Aquamarine"></TextBlock>
+
   </StackPanel>
+
 </UserControl>
