--- a/ReQuantum/Modules/Settings/Presentations/SettingsView.axaml
+++ b/ReQuantum/Modules/Settings/Presentations/SettingsView.axaml
@@ -72,7 +72,7 @@
               CornerRadius="8"
               Padding="20">
         <StackPanel Spacing="16">
-          <TextBlock Text="PTA 登录"
+          <TextBlock Text="{Binding Localizer[PtaLogin]}"
                      FontSize="20"
                      FontWeight="SemiBold"/>
 
