--- a/ReQuantum/Modules/MyNotes/Presentations/CourseSelectionView.axaml
+++ b/ReQuantum/Modules/MyNotes/Presentations/CourseSelectionView.axaml
@@ -4,12 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:ReQuantum.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ReQuantum.Views.MyNotesView"
-             x:DataType="viewModels:MyNotesViewModel">
+             x:Class="ReQuantum.Views.CourseSelectionView"
+             x:DataType="viewModels:CourseSelectionViewModel">
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <viewModels:MyNotesViewModel />
+        <viewModels:CourseSelectionViewModel />
     </Design.DataContext>
     <StackPanel>
         <Grid Margin="100" 
